--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "dependencies": {
     "express": "3.x",
     "ejs": "*",
-    "less-middleware": "*"
+    "less-middleware": "*",
+    "socket.io": "*"
   }
 }
