--- a/package.json
+++ b/package.json
@@ -9,6 +9,11 @@
     "express": "3.x",
     "ejs": "*",
     "less-middleware": "*",
-    "socket.io": "*"
+    "socket.io": "*",
+    "mail-listener2": "*",
+    "imap": "*",
+    "mailparser": "*",
+    "htmlencode": "*",
+    "mongoose": "~3.8.1"
   }
 }
